[tool.poetry]
name = "bustw_cli"
version = "2.5.0"
description = "bus tracker for Taiwanese for CLI"
authors = ["Pin Lin <moneycat711@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.22"
PyInquirer = "^1.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.4"
pylint = "^2.4"
rope = "^0.14.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
